--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,16 @@ body {
   font-family: "Open Sans Condensed";
   padding: 20px 60px;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+body::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+* {
+  box-sizing: border-box;
+}
